feat: Test parametrized feature create and read